src/components/header/header.scss
@import "../../components/utils/utils.scss";

.header-wrap {
  @include spaceBetween;
}
.search-input {
  width: 20rem;
  position: relative;
}
.search-icon {
  position: absolute;
  top: 12px;
  right: 12px;
  color: grey;
}
.search-textbox {
  width: inherit;
  font-size: var(--form-text);
  padding-top: 10px;
  padding-bottom: 10px;
  padding-left: 29px;
  padding-right: 50px;
}
select {
  display: block;
  width: 11rem;
  height: 40px;
  padding: 0.375rem 2.25rem 0.375rem 1.4rem;
  font-size: var(--form-text);
  font-weight: 400;
  line-height: 1.5;
  color: #212529;
  background-color: #fff;
  background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 16 16'%3e%3cpath fill='none' stroke='%23343a40' stroke-linecap='round' stroke-linejoin='round' stroke-width='2' d='M2 5l6 6 6-6'/%3e%3c/svg%3e");
  background-repeat: no-repeat;
  background-position: right 0.75rem center;
  background-size: 16px 12px;
  border: 0.5px solid #c4c4c4;
  border-radius: 2px;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
}
.sort-row {
  display: flex;
  justify-content: flex-end;
}

.sort-items {
  margin-right: 1rem;
  position: relative;
}
.sort-items:last-child {
  margin-right: 0;
}
.sort-title {
  height: 37px;
  line-height: 37px;
  font-size: var(--small-text);
  color: #989898;
}
.select-item {
  font-size: 14px;
}
.sort-label {
  font-size: 12px;
  position: absolute;
  top: -8px;
  bottom: 0;
  left: 1.4rem;
  height: 18px;
  background: white;
  color: #8f8b8b;
}

@media (max-width: 1200px) {
  .select-item,
  .search-input {
    width: 100%;
  }
  .header-wrap {
    flex-direction: column;
    margin: 1rem auto 1rem auto;
  }
  .search-icon {
    top: 27px;
  }
  .form-tag {
    margin: 1rem auto;
    width: 100%;
  }
  .sort-row {
    flex-direction: column;
  }
  .sort-items {
    margin-bottom: 1rem;
    margin-right: 0;
  }
}

